Verification for Hybrid node pool/Case-12-Limit-egress-using-ports/Pods-and-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-pod
  namespace: development
  labels:
    app: backend
spec:
  containers:
    - name: windows-pod
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - $listener = New-Object System.Net.HttpListener; $listener.Prefixes.Add('http://*:80/'); $listener.Start();Write-Host('Listening at http://*:80/'); while ($listener.IsListening) { $context = $listener.GetContext(); $response = $context.Response; $content='<html><body><H1>Red Hat OpenShift + Windows Container Workloads</H1></body></html>'; $buffer = [System.Text.Encoding]::UTF8.GetBytes($content); $response.ContentLength64 = $buffer.Length; $response.OutputStream.Write($buffer, 0, $buffe [...]
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
---
apiVersion: v1
kind: Service
metadata:
  name: win-service
  namespace: development
spec:
  selector:
    app: backend
  ports:
    - name: windows-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: linux-pod
  namespace: development
  labels:
    app: webserver
spec:
  containers:
    - name: linux-pod
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: lin-service
  namespace: development
spec:
  selector:
    app: webserver
  ports:
    - name: windows-service
      protocol: TCP
      port: 80
      targetPort: 80
---
